--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "scss": "node-sass src/scss --output-style compressed -o public/css",
     "js": "browserify src/js/main.js > public/js/main.js",
-    "serve": "browser-sync start --files 'public/css/main.css, **/*.html, public/js/main.js' -p 'cintas.lndo.site' --no-open",
+    "serve": "browser-sync start --files 'public/css/main.css, **/*.html, public/js/main.js' -p 'v6.lndo.site' --no-open",
     "watch:js": "onchange 'src/js' -- npm run js",
     "watch:css": "onchange 'src/scss' -- npm run scss",
     "start": "npm run js & npm run scss && run-p serve watch:css watch:js"
